# quantum-password-manager

./: .clippy.toml  .dockerignore  CI_CD_SETUP.md  Cargo.toml  DEPLOYMENT.md  LICENSE.md  Makefile  README.md  ROADMAP.md  rustfmt.toml
.github/: README.md  release-template.md
.github/workflows/: build.yml  ci.yml  deb-release.yml  dependencies.yml  security.yml
scripts/: release.sh
src/: cli.rs  crypto.rs  database.rs  error.rs  hardware.rs  main.rs  models.rs  tests.rs
src/cli/: clipboard.rs  commands.rs  mod.rs  progress.rs
src/crypto/: context.rs  mod.rs  password.rs  progress.rs
