[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"
authors = ["Password Manager Team"]
description = "Ultra-secure password manager with quantum-resistant encryption"

[dependencies]
# Core encryption and cryptography
aes-gcm = "0.10.3"
argon2 = "0.5.2"
rand = "0.8.5"
getrandom = "0.2.10"
hmac = "0.12"
hkdf = "0.12"

# Hardware acceleration (provided by aes-gcm internally when available)

# Hashing and integrity
sha2 = "0.10.8"
crc = "3.0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and user interaction
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3.1"
dialoguer = "0.11.0"
console = "0.15.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system and I/O
base64 = "0.21.5"
sha3 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Memory cleanup
zeroize = "1.8"

[dev-dependencies]
tempfile = "3.8"
